TOTAL CREDIT HOUR dynamically added and select  maximum credit limit 20 feature working ....

--- a/src/Dataload.css
+++ b/src/Dataload.css
@@ -7,12 +7,12 @@
     
 }
 .footer-content {
-    padding: 20px; /* Adjust padding as needed */
+    padding: 20px; 
   }
   
   .footer-title {
-    font-size: 1.2rem; /* Adjust font size as needed */
-    margin-bottom: 10px; /* Adjust margin as needed */
+    font-size: 1.2rem; 
+    margin-bottom: 10px; 
   }
  
   
