--- a/src/Dataload.css
+++ b/src/Dataload.css
@@ -3,7 +3,7 @@
     font-size: 20px;
     font-family: Inter;
     font-weight: 700;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     
 }
 .footer-content {
@@ -13,6 +13,7 @@
   .footer-title {
     font-size: 1.2rem; 
     margin-bottom: 10px; 
+    font-weight: 500;
   }
  
   
